[package]
name = "tx_engine"
version = "0.1.0"
authors = ["Jeff Rade <jeffrade@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
rust_decimal = "1.10.1"
serde = "1.0.123"
serde_derive = "1.0.123"